<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EventInfoFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v7.widget.CardView
        android:id="@+id/there_is_event"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2.5dp"
        app:cardElevation="24dp"
        app:cardCornerRadius="12dp"
        android:layout_centerInParent="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/calendar_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/calendar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="272dp"
                android:layout_marginRight="272dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/img_artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/knicks" />

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/name_artist"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:layout_marginEnd="212dp"
                android:layout_marginRight="212dp"
                android:layout_marginTop="136dp"
                android:fontFamily="@font/centurygothic1"
                android:text="FHGGHGHGHGH"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="394dp"
                android:layout_marginTop="176dp"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/centurygothic1"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:text="@string/event" />

                    <EditText
                        android:id="@+id/event_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:backgroundTint="@android:color/black"
                        android:fontFamily="@font/centurygothic1"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:editable="false" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/centurygothic1"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:text="@string/date" />

                    <EditText
                        android:id="@+id/event_date"
                        android:fontFamily="@font/centurygothic1"
                        android:textColor="@android:color/black"
                        android:backgroundTint="@android:color/black"
                        android:textSize="16sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:editable="false" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/centurygothic1"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            android:text="@string/time" />

                        <EditText
                            android:id="@+id/event_time"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@android:color/black"
                            android:fontFamily="@font/centurygothic1"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            android:editable="false" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginLeft="5dp"
                            android:fontFamily="@font/centurygothic1"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            android:text="@string/time_zone" />

                        <EditText
                            android:id="@+id/time_zone"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:backgroundTint="@android:color/black"
                            android:fontFamily="@font/centurygothic1"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            android:editable="false" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="56dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/centurygothic1"
                        android:text="@string/country_city_state"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/country_city_state"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:backgroundTint="@android:color/black"
                        android:fontFamily="@font/centurygothic1"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:editable="false" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/centurygothic1"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:text="@string/venue_name" />

                    <EditText
                        android:id="@+id/venue_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:backgroundTint="@android:color/black"
                        android:fontFamily="@font/centurygothic1"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:editable="false" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/centurygothic1"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:text="@string/link" />

                    <TextView
                        android:id="@+id/event_link"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/centurygothic1"
                        android:textSize="16sp"
                        android:textColor="#0645ad" />
                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/prev_btn"
                style="?android:borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="64dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="540dp"
                android:clickable="true"
                android:src="@drawable/left_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/next_btn"
                style="?android:borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="540dp"
                android:clickable="true"
                android:src="@drawable/right_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/no_eventLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/sad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="368dp"
            android:text="@string/no_event_for_this_artist"
            android:textAllCaps="false"
            android:fontFamily="@font/gothic_bo"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>


</RelativeLayout>